--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <title>Jewelry Shop</title>
   </head>
   <body>
+    <div id="renkler">
+      <div class="sıra">
+        <div class="d1"></div>
+        <div class="d2"></div>
+        <div class="d3"></div>
+        <div class="d4"></div>
+        <div class="d5"></div>
+        <div class="d6"></div>
+        <div class="d7"></div>
+      </div>
+    </div>
     <div id="headback">
       <div class="a1">
         <div><a href="index.html"> Welcome to Jewelry Shop</a></div>
@@ -30,16 +41,27 @@
       </div>
       <div class="c1">
         <a href="#">
-          <img width="27" height="21" src="fonts/icons8-instagram.svg" />
+          <img
+            class="follow"
+            src="fonts/icons8-instagram.svg"
+            onerror="this.onerror=null;"
+          />
         </a>
         <a href="#"
-          ><img width="27" height="21" src="fonts/icons8-twitter.svg"
+          ><img
+            class="follow"
+            src="fonts/icons8-twitter.svg"
+            onerror="this.onerror=null;"
         /></a>
       </div>
     </div>
     <div id="nav">
       <div class="logo">
-        <img width="311px" height="73px" src="fonts/jewelry.png" />
+        <img
+          class="isim"
+          src="fonts/jewelry.png"
+          onerror="this.onerror=null;"
+        />
       </div>
       <div id="menu">
         <a class="amenu" href="#">HOME</a>
@@ -53,6 +75,74 @@
     <div class="our">OUR PRODUCTS</div>
     <div class="altour">
       OUR VISION IS TO BE EARTH'S MOST CUSTOMER CENTRIC COMPANY
+    </div>
+    <div class="anakutu">
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu">
+          <div class="s1"><span>%20 DISCOUNT</span></div>
+        </div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 100</div>
+      </div>
+      <div>
+        <div id="kut">
+          <div class="akut">
+            <div class="text">ADD TO CARD</div>
+          </div>
+        </div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
+      <div>
+        <div class="kutu"></div>
+        <div class="adi">İTEM 1</div>
+        <div class="fiyat">$ 300</div>
+      </div>
     </div>
   </body>
 </html>
