--- a/index.html
+++ b/index.html
@@ -31,29 +31,25 @@
             <summary>Einglish</summary>
             SİVASLI EMRE
           </details>
-        </div>
-        <div class="b2">
-          <details>
+          <details class="b2">
             <summary>US Dollar</summary>
             SİVASLI EMRE
           </details>
         </div>
       </div>
-      <div class="c1">
-        <a href="#">
-          <img
-            class="follow"
-            src="fonts/icons8-instagram.svg"
-            onerror="this.onerror=null;"
-          />
-        </a>
-        <a href="#"
-          ><img
-            class="follow"
-            src="fonts/icons8-twitter.svg"
-            onerror="this.onerror=null;"
-        /></a>
-      </div>
+      <a class="c1" href="#">
+        <img
+          class="follow"
+          src="fonts/icons8-instagram.svg"
+          onerror="this.onerror=null;"
+        />
+      </a>
+      <a class="c2" href="#"
+        ><img
+          class="follow"
+          src="fonts/icons8-twitter.svg"
+          onerror="this.onerror=null;"
+      /></a>
     </div>
     <div id="nav">
       <div class="logo">
